# ExoMy_Software

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  package.xml  setup.cfg  setup.py
config/: exomy.yaml  exomy.yaml.template
docker/: Dockerfile  entrypoint.sh  run_autostart.sh  run_config.sh  run_exomy.sh  run_ros.sh
exomy/: CMakeLists.txt  joystick_node.py  motors.py  package.xml  robot_node.py  rover.py  setup.py
exomy/config/: exomy.yaml  exomy.yaml.template
exomy/exomy/: gamepad_parser_node.py  joystick_node.py  joystick_parser_node.py  locomotion_modes.py  motor_node.py  motors.py  robot_node.py  rover.py
exomy/exomy_core/: package.xml  setup.cfg  setup.py
exomy/exomy_core/exomy_core/: joystick_parser_node.py  motor_node.py  robot_node.py
exomy/exomy_core/launch/: exomy.launch.py
exomy/exomy_msgs/: CMakeLists.txt  package.xml
exomy/exomy_msgs/msg/: Screen.msg
exomy/gui/: index.html  package-lock.json  package.json  run_gui.sh  style.css
exomy/launch/: exomy.launch  exomy.launch.py
exomy/scripts/: cam_test.py  config_drive_motor_neutral.py  config_drive_motor_offset.py  config_motor_pins.py  config_steer_motor_neutral.py  config_steer_motor_offset.py  motor_test.py
exomy/src/: driver_node.py  joystick_node.py  motor_node.py  motors.py  robot_node.py  rover.py  screen_node.py
exomy_bringup/: CMakeLists.txt  package.xml
exomy_msgs/: CMakeLists.txt  package.xml
gui/: index.html  package-lock.json  style.css
gui_sv/: index.html
launch/: exomy.launch
msg/: Commands.msg  Joystick.msg
scripts/: .config_motor_pins.py.swp  cam_test.py  config_drive_motor_neutral.py  config_drive_motor_neutral_software.py  config_drive_motor_offset.py  motor_test.py  (+6 more)
(+11 files in other folders)
