<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>exomy</name>
  <version>2.0.0</version>
  <description>Core functionality for ExoMy</description>
  <maintainer email="max.ehrhardt@hotmail.de">Maximilian Ehrhardt</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>exomy_msgs</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
